# aronerben.github.io

./: .gitignore  CNAME  README.md  about.html  aronwith1a.cabal  blog.html  deploy.sh  hie.yaml  index.html  site.hs  stack.yaml
.hie/: Main.hie
agda-posts/: 2021-02-15-lol.agdai  2021-02-15-lol.lagda.md  gaussian-sum-proof.lagda.md  set-up-agda-hakyll.lagda.md
agda-posts/html/: 2021-02-15-lol.md
css/: agda.css  default.css  syntax.css
dist-newstyle/cache/: config
posts/: 2021-01-30-lol.html  2021-01-30-lol.md  2021-02-15-lol.html  building-routine.md  css-growing-box-hover.html  css-growing-box-hover.md  fundamental-theorem-symm-poly.html  fundamental-theorem-symm-poly.md  gaussian-sum-proof.html  hakyll-automatic-anchors.html  hakyll-automatic-anchors.md  lol.html  lol.md  personal-posts.md  playing-bass-or-contrabass.html  playing-bass-or-contrabass.md  public-bench-meditation.md  set-up-agda-hakyll.html  shoutout-joseferben.html  shoutout-joseferben.md
posts_ideas/: sihl-csrf-crypto.md  ski-hello-world-p0.md  ski-hello-world-p1.md
templates/: base.html  default.html  post.html
