name:                aronwith1a
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aronwith1a#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable aronwith1a
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -fwrite-ide-info
                       -hiedir=.hie
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , filepath >= 1.4
                     , directory >= 1.3
                     , process >= 1.4.3
